fixed card getting hidden by header

--- a/src/css/card.module.css
+++ b/src/css/card.module.css
@@ -45,7 +45,7 @@
     transform: rotate(0);
     margin-inline: auto;
     margin-bottom: 2rem;
-    margin-top: 4.5rem;
+    margin-top: 5.5rem;
   }
 
   .img_container {
